--- a/Homeworks1and2/pom.xml
+++ b/Homeworks1and2/pom.xml
@@ -7,6 +7,23 @@
     <groupId>org.example</groupId>
     <artifactId>Homeworks1and2-maven</artifactId>
     <version>0.1</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
